<resources>

    <!-- Configuration -->
    <string name="server_url">http://ohap.opimobi.com:8080/</string>

    <!-- Container activity -->
    <string name="title_container_activity">OHAPClient13</string>
    <string name="menu_click_toast">Already in the Activity</string>
    <string name="ping_message">ping</string>
    <string name="question_box_startup">Do you want to switch to simulation mode?</string>
    <string name="online_mode">ONLINE</string>
    <string name="simulation_mode">SIMULATION</string>

    <!-- Container list adapter -->
    <string name="color_device_value_on">#ffffff</string>
    <string name="color_device_value_off">#d0d0d0</string>

    <!-- Device activity -->
    <string name="title_device_activity">No device type</string>
    <string name="device_name">No device name</string>
    <string name="device_desc">No device id</string>
    <string name="centralunit_name">OHAP Test Server</string>
    <string name="container_hierarchy">Offline</string>
    <string name="switch_text">binary value</string>
    <string name="seekbar_text">decimal value</string>
    <string name="seekbar_maxvalue">10000</string>

    <!-- Preferences activity -->
    <string name="title_preference_activity">Settings</string>
    <string name="pref_category_title_connection">Connection settings</string>
    <string name="pref_autoconnect_key">pref_autoconnect</string>
    <string name="pref_autoconnect_title">Auto-connect</string>
    <string name="pref_autoconnect_summary">Automatically connects to the server</string>
    <string name="pref_autoconnect_default">true</string>
    <string name="pref_url_key">pref_url</string>
    <string name="pref_url_title">Server</string>
    <string name="pref_url_summary">Default</string>
    <string name="pref_url_default">http://192.168.0.100</string>
    <string name="pref_port_key">pref_port</string>
    <string name="pref_port_title">Port</string>
    <string name="pref_port_summary">Default</string>
    <string name="pref_port_default">18001</string>
    <string name="pref_reconnect_on_shake_key">pref_shake</string>
    <string name="pref_reconnect_on_shake_title">Reconnect on shake</string>
    <string name="pref_reconnect_on_shake_summary">If shake is detected, will attempt reconnecting to server</string>
    <string name="pref_reconnect_on_shake_default">true</string>
    <string name="pref_category_title_diagnostics">Diagnostics</string>
    <string name="pref_log_key">pref_log</string>
    <string name="pref_log_title">Server log</string>
    <string name="pref_log_summary">Click to open TCP message log</string>

    <!-- Helper activity -->
    <string name="title_activity_helper">About OHAPClient13</string>
    <string name="text_about">
        OHAPClient13 Remote Control app for Open Home Automation Protocol (OHAP)
        \n\nThis application has been developed as course work for 815303A Embedded Software Development
        Environments -course during Academic year 2016 at the University of Oulu.
        \n\n\nAuthor:
        \nAapo Keskimolo (aapokesk@gmail.com) \n </string>

    <!-- Menu bar -->
    <string name="menu_main">Main</string>
    <string name="menu_ping">Ping</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">About</string>

    <!-- Log activity -->
    <string name="title_log_activity">Server Log</string>

    <!-- Message activity -->
    <string name="title_message_activity">Message</string>
    <string name="log_message_default">Default</string>


</resources>
