<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ContainerActivity">


    <item
        android:id="@+id/menu_main"
        android:layout_centerVertical="true"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:title="@string/menu_main"
        app:showAsAction="always|withText"
        android:icon="@drawable/ic_house_list" />


    <item
        android:id="@+id/menu_ping"
        android:layout_centerVertical="true"
        android:layout_width="@dimen/menu_ic_width"
        android:layout_height="@dimen/menu_ic_height"
        android:layout_marginLeft="@dimen/menu_ic_marginLeft"
        android:layout_marginRight="@dimen/menu_ic_marginRight"
        android:layout_marginTop="@dimen/menu_ic_marginTop"
        android:layout_marginBottom="@dimen/menu_ic_marginBottom"
        android:title="@string/menu_ping"
        android:icon="@drawable/ic_ping"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/menu_settings"
        android:layout_centerVertical="true"
        android:layout_width="@dimen/menu_ic_width"
        android:layout_height="@dimen/menu_ic_height"
        android:layout_marginLeft="@dimen/menu_ic_marginLeft"
        android:layout_marginRight="@dimen/menu_ic_marginRight"
        android:layout_marginTop="@dimen/menu_ic_marginTop"
        android:layout_marginBottom="@dimen/menu_ic_marginBottom"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="always|withText" />


    <item
        android:id="@+id/menu_help"
        android:layout_centerVertical="true"
        android:layout_width="@dimen/menu_ic_width"
        android:layout_height="@dimen/menu_ic_height"
        android:layout_marginLeft="@dimen/menu_ic_marginLeft"
        android:layout_marginRight="@dimen/menu_ic_marginRight"
        android:layout_marginTop="@dimen/menu_ic_marginTop"
        android:layout_marginBottom="@dimen/menu_ic_marginBottom"
        android:title="@string/menu_help"
        android:icon="@drawable/ic_help"
        app:showAsAction="always|withText" />

</menu>
