<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DeviceActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_rowTop_height"></LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/container_hierarchy"
            android:id="@+id/textViewContainerName"
            android:layout_gravity="center"
            android:textSize="@dimen/text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_name"
            android:id="@+id/textViewDeviceName"
            android:layout_gravity="center"
            android:textSize="@dimen/text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_desc"
            android:id="@+id/textViewDeviceDesc"
            android:layout_gravity="center"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch1"
            android:visibility="gone"
            android:gravity="center"
            android:layout_below="@+id/textViewSwitch"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_text"
            android:textSize="@dimen/text_size"
            android:id="@+id/textViewSwitch"
            android:visibility="gone"
            android:layout_weight="1"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seekbar_text"
                android:textSize="@dimen/text_size"
                android:id="@+id/textViewSeekBar"
                android:visibility="gone"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_column="2"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="bottom" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.0 C"
                android:id="@+id/textViewDecimalMin"
                android:visibility="gone"
                android:layout_column="0"
                android:layout_weight="1"
                android:gravity="center" />

            <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar"
                android:visibility="gone"
                android:layout_below="@+id/textViewSeekBar"
                android:layout_centerHorizontal="true"
                android:layout_column="1"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100.0 C"
                android:id="@+id/textViewDecimalMax"
                android:visibility="gone"
                android:layout_column="2"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_rowTop_height" />

</LinearLayout>
